--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gizmobuy-backend",
+  "name": "shopfinity-backend",
   "version": "1.0.0",
-  "description": "create apis for gizmobuy",
+  "description": "create apis for shopfinity",
   "main": "index.js",
   "scripts": {
-    "start:prod": "node ./dist/server.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "node ./dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "lint": "eslint src --ignore-path .eslintignore --ext .ts",
     "lint:fix": "npx eslint src --fix",
@@ -23,7 +23,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/nodemailer": "^6.4.14",
     "@types/sendgrid": "^4.3.0",
-    "axios": "^1.6.8",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
@@ -31,10 +31,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "http-status": "^1.7.3",
+    "http-status": "^1.8.1",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.16.1",
     "nodemailer": "^6.9.9",
     "sendgrid": "^5.2.3",
     "sslcommerz-lts": "^1.1.0",
